--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -85,6 +85,7 @@
     -fx-border-radius: 1;
     -fx-border-width: 1;
     -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-border-color: transparent transparent #4d4d4d transparent;
 }
 
 .list-view {
@@ -313,6 +314,36 @@
 #commandTypeLabel {
     -fx-font-size: 11px;
     -fx-text-fill: #F70D1A;
+}
+
+#detailsPane {
+    -fx-background-color: transparent #383838 transparent #383838;
+    -fx-background-insets: 0;
+    -fx-border-color: #383838 #383838 #383838 #383838;
+    -fx-border-insets: 0;
+    -fx-border-width: 1;
+}
+
+#detailsPane .label {
+    -fx-text-fill: white;
+    -fx-fill: white;
+    -fx-font-family: "Arial";
+    -fx-font-size: 15pt;
+}
+
+#addressPane {
+    -fx-background-color: transparent #383838 transparent #383838;
+    -fx-background-insets: 0;
+    -fx-border-color: #383838 #383838 #383838 #383838;
+    -fx-border-insets: 0;
+    -fx-border-width: 1;
+}
+
+#addressPane .label {
+    -fx-text-fill: white;
+    -fx-fill: white;
+    -fx-font-family: "Arial";
+    -fx-font-size: 15pt;
 }
 
 #commandTextField {
