--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -57,10 +57,10 @@
     -fx-border-width: 0 0 1 0;
     -fx-background-color: transparent;
     -fx-border-color:
-            transparent
-            transparent
-            derive(-fx-base, 80%)
-            transparent;
+        transparent
+        transparent
+        derive(-fx-base, 80%)
+        transparent;
     -fx-border-insets: 0 10 1 0;
 }
 
@@ -85,6 +85,7 @@
     -fx-border-radius: 1;
     -fx-border-width: 1;
     -fx-background-color: derive(#ffffff, 20%);
+    -fx-border-color: transparent transparent #979797 transparent;
 }
 
 .list-view {
@@ -313,6 +314,38 @@
 #commandTypeLabel {
     -fx-font-size: 11px;
     -fx-text-fill: #db0008;
+}
+
+#detailsPane {
+    -fx-background-color: transparent #383838 transparent #383838;
+    -fx-background-insets: 0;
+    -fx-border-color: #383838 #383838 #383838 #383838;
+    -fx-border-insets: 0;
+    -fx-border-width: 1;
+}
+
+#detailsPane .label {
+    -fx-font-weight: bold;
+    -fx-text-fill: black;
+    -fx-fill: black
+    -fx-font-family: "Arial";
+    -fx-font-size: 15pt;
+}
+
+#addressPane {
+    -fx-background-color: transparent #383838 transparent #383838;
+    -fx-background-insets: 0;
+    -fx-border-color: #383838 #383838 #383838 #383838;
+    -fx-border-insets: 0;
+    -fx-border-width: 1;
+}
+
+#addressPane .label {
+    -fx-font-weight : bold;
+    -fx-text-fill: black;
+    -fx-fill: black;
+    -fx-font-family: "Arial";
+    -fx-font-size: 15pt;
 }
 
 #commandTextField {
