--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -34,6 +35,11 @@
       <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
       </padding>
+         <Label fx:id="listName" alignment="CENTER" maxHeight="30.0" minHeight="30.0" prefHeight="30.0" text="List" textAlignment="JUSTIFY">
+            <VBox.margin>
+               <Insets bottom="10.0" left="20.0" />
+            </VBox.margin>
+         </Label>
       <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
     </VBox>
       <VBox>
