--- a/src/main/resources/view/PersonDetailsCard.fxml
+++ b/src/main/resources/view/PersonDetailsCard.fxml
@@ -7,69 +7,86 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <StackPane alignment="TOP_LEFT" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox fx:id="detailsPane" prefWidth="100.0">
          <children>
             <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0">
               <items>
-                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Name :">
+                  <Label fx:id="nameHeader" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Name :">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="name" />
+                  <Label fx:id="nameLarge">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding></Label>
               </items>
             </SplitPane>
             <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0">
               <items>
-                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Phone :">
+                  <Label fx:id="phoneHeader" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Phone :">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="phone" />
+                  <Label fx:id="phoneLarge">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding></Label>
               </items>
             </SplitPane>
             <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0">
               <items>
-                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Birthday :">
+                  <Label fx:id="birthdayHeader" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Birthday :">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="birthday" />
+                  <Label fx:id="birthdayLarge">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding></Label>
               </items>
             </SplitPane>
             <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0">
               <items>
-                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Email :">
+                  <Label fx:id="emailHeader" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Email :">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="email" />
+                  <Label fx:id="emailLarge">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding></Label>
               </items>
             </SplitPane>
             <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0">
               <items>
-                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Tags :">
+                  <Label fx:id="tagsHeader" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Tags :">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <FlowPane fx:id="tags" alignment="CENTER_LEFT" />
+                  <FlowPane fx:id="tagsLarge" alignment="CENTER_LEFT">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding></FlowPane>
               </items>
             </SplitPane>
             <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0">
               <items>
-                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Notes :">
+                  <Label fx:id="notesHeader" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Notes :">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="notes" />
+                  <Label fx:id="notesLarge">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding></Label>
               </items>
             </SplitPane>
          </children>
