--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -324,13 +324,6 @@
     -fx-border-width: 1;
 }
 
-#detailsPane .label {
-    -fx-text-fill: white;
-    -fx-fill: white;
-    -fx-font-family: "Arial";
-    -fx-font-size: 15pt;
-}
-
 #addressPane {
     -fx-background-color: transparent #383838 transparent #383838;
     -fx-background-insets: 0;
@@ -339,10 +332,18 @@
     -fx-border-width: 1;
 }
 
-#addressPane .label {
+#nameHeader, #phoneHeader, #birthdayHeader, #emailHeader, #notesHeader, #addressHeader, #tagsHeader {
     -fx-text-fill: white;
     -fx-fill: white;
+    -fx-font-weight: bold;
     -fx-font-family: "Arial";
+    -fx-font-size: 15pt;
+}
+
+#nameLarge, #phoneLarge, #birthdayLarge, #emailLarge, #notesLarge, #addressLarge {
+    -fx-text-fill: white;
+    -fx-fill: white;
+    -fx-font-family: "Segoe UI Light";
     -fx-font-size: 15pt;
 }
 
@@ -371,6 +372,20 @@
 #resultDisplay .content {
     -fx-background-color: transparent, #383838, transparent, #383838;
     -fx-background-radius: 0;
+}
+
+#tagsLarge{
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#tagsLarge .label {
+    -fx-text-fill: white;
+    -fx-background-color: #3e7b91;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 17;
 }
 
 #tags {
