--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -324,14 +324,6 @@
     -fx-border-width: 1;
 }
 
-#detailsPane .label {
-    -fx-font-weight: bold;
-    -fx-text-fill: black;
-    -fx-fill: black
-    -fx-font-family: "Arial";
-    -fx-font-size: 15pt;
-}
-
 #addressPane {
     -fx-background-color: transparent #383838 transparent #383838;
     -fx-background-insets: 0;
@@ -340,11 +332,18 @@
     -fx-border-width: 1;
 }
 
-#addressPane .label {
-    -fx-font-weight : bold;
+#nameHeader, #phoneHeader, #birthdayHeader, #emailHeader, #notesHeader, #addressHeader, #tagsHeader {
     -fx-text-fill: black;
     -fx-fill: black;
+    -fx-font-weight: bold;
     -fx-font-family: "Arial";
+    -fx-font-size: 15pt;
+}
+
+#nameLarge, #phoneLarge, #birthdayLarge, #emailLarge, #notesLarge, #addressLarge {
+    -fx-text-fill: black;
+    -fx-fill: black;
+    -fx-font-family: "Segoe UI Light";
     -fx-font-size: 15pt;
 }
 
@@ -373,6 +372,20 @@
 #resultDisplay .content {
     -fx-background-color: transparent, #ffffff, transparent, #ffffff;
     -fx-background-radius: 0;
+}
+
+#tagsLarge{
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#tagsLarge .label {
+    -fx-text-fill: black;
+    -fx-background-color: #16ffff;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 17;
 }
 
 #tags {
