added test case for modeCommand

--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -348,6 +348,7 @@
 }
 
 #listName {
+    -fx-background-color: white;
     -fx-text-fill: black;
     -fx-fill: black;
     -fx-font-family: "Arial";
