--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -33,6 +33,7 @@
       <Label fx:id="birthday" styleClass = "cell_small_label" text="\$birthday" />
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+      <Label fx:id="organisation" styleClass="cell_small_label" text="\$organisation" />
     </VBox>
       <rowConstraints>
          <RowConstraints />
