Fix Map display not resizing properly

--- a/src/main/resources/view/AddressPanel.fxml
+++ b/src/main/resources/view/AddressPanel.fxml
@@ -22,7 +22,7 @@
                   </padding></Label>
             </items>
          </SplitPane>
-        <WebView fx:id="browser" minHeight="-Infinity" minWidth="-Infinity" />
+        <WebView fx:id="browser" minHeight="-Infinity" minWidth="-Infinity" VBox.vgrow="ALWAYS" />
       </children>
    </VBox>
 </StackPane>
