[Remark] Link remark field to PersonDetailsCard remark column.

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -331,7 +331,7 @@
     -fx-border-insets: 0;
     -fx-border-width: 1;
 }
-#nameLarge, #phoneLarge, #birthdayLarge, #emailLarge, #notesLarge, #addressLarge, #organisationLarge {
+#nameLarge, #phoneLarge, #birthdayLarge, #emailLarge, #remarkLarge, #addressLarge, #organisationLarge {
     -fx-text-fill: white;
     -fx-fill: white;
     -fx-font-weight: bold;
@@ -339,7 +339,7 @@
     -fx-font-size: 15pt;
 }
 
-#nameHeader, #phoneHeader, #birthdayHeader, #emailHeader, #notesHeader, #addressHeader, #organisationHeader,
+#nameHeader, #phoneHeader, #birthdayHeader, #emailHeader, #remarkHeader, #addressHeader, #organisationHeader,
 #tagsHeader {
     -fx-text-fill: white;
     -fx-fill: white;
