Collated code - frozventus

--- a/src/main/resources/view/AddressPanel.fxml
+++ b/src/main/resources/view/AddressPanel.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
 
+<!-- @@author frozventus -->
 <StackPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <VBox fx:id="addressPane" prefHeight="200.0" prefWidth="100.0">
       <children>
