--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -50,6 +50,7 @@
                <Insets bottom="5" left="10" right="10" top="5" />
              </padding>
            </StackPane>
+            <!-- @@author frozventus -->
             <SplitPane dividerPositions="0.2" prefWidth="200.0" VBox.vgrow="ALWAYS">
               <items>
                   <StackPane fx:id="detailsPlaceholder" prefHeight="150.0" prefWidth="200.0">
