--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -89,6 +89,8 @@
 }
 
 .list-view {
+    -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
+    -fx-background-color: #3c3e3f;
     -fx-background-insets: 0;
     -fx-padding: 0;
 }
