--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -89,11 +89,14 @@
 }
 
 .list-view {
+    -fx-effect: innershadow(gaussian, #9a9a9a, 10, 0, 0, 0);
+    -fx-background-color: white;
     -fx-background-insets: 0;
     -fx-padding: 0;
 }
 
 .list-cell {
+    -fx-background-color: white;
     -fx-label-padding: 0 0 0 0;
     -fx-graphic-text-gap : 0;
     -fx-padding: 0 0 0 0;
